index and CSS edited

--- a/index.html
+++ b/index.html
@@ -580,13 +580,16 @@
             <li class="contact-item">
               <ion-icon name="mail-outline"></ion-icon>
 
-              <a href="mailto:andin.tourly.com" class="contact-link">info.andin.com</a>
+              <a href="mailto:andin.tourly.com" class="contact-link">andintransport@gmail.com</a>
             </li>
 
             <li class="contact-item">
               <ion-icon name="location-outline"></ion-icon>
-
-              <address>Jl. Tenggilis Mejoyo Selatan V No.19, Surabaya</address>
+              <address>
+                <a href="https://maps.app.goo.gl/bRYcG71CWFnHN2PW8" target="_blank" style="color: inherit; text-decoration: none;">
+                  Jl. Tenggilis Mejoyo Selatan 5 No.19, Surabaya
+                </a>
+              </address>
             </li>
 
           </ul>
