--- a/index.html
+++ b/index.html
@@ -153,16 +153,22 @@
             Anda bisa menyewa mobil harian, mingguan, atau bulanan untuk keperluan pribadi maupun perusahaan!
           </p>
 
+
+
+          <!-- Kalau butuh Pake ajaa -->
+           
+          <!--
           <div class="btn-group">
             <a href="#rent" class="btn btn-primary">Learn more</a>
             <button class="btn btn-primary" onclick="window.open('https://wa.me/6281938221739?text=Halo%20kak%20saya%20dari%20website%20AndinTransport%20ingin%20bertanya%20mengenai%20rental%20mobil', '_blank')">
               Book Now
           </button>
           </div>
-
+          -->
 
         </div>
       </section>
+
 
 
 
