--- a/index.html
+++ b/index.html
@@ -369,6 +369,85 @@
                   </ul>
                </div>
             </section>
+
+            <section class="property" id="property">
+               <div class="container">
+
+                  <p class="section-subtitle">Properties</p>
+
+                  <h2 class="h2 section-title">Featured Listings</h2>
+
+                  <ul class="property-list has-scrollbar">
+
+                     <li>
+                     <div class="property-card">
+
+                        <figure class="card-banner">
+
+                           <a href="#">
+                           <img src="./assets/images/Document-1.jpeg" alt="New Apartment Nice View" class="w-100">
+                           </a>
+
+                           <div class="card-badge green">For Rent</div>
+
+                        </figure>
+
+                     </div>
+                     </li>
+
+                     <li>
+                     <div class="property-card">
+
+                        <figure class="card-banner">
+
+                           <a href="#">
+                           <img src="./assets/images/Document-2.jpeg" alt="Modern Apartments" class="w-100">
+                           </a>
+
+                           <div class="card-badge orange">For Sales</div>
+
+                        </figure>
+
+                     </div>
+                     </li>
+
+                     <li>
+                     <div class="property-card">
+
+                        <figure class="card-banner">
+
+                           <a href="#">
+                           <img src="./assets/images/Document-2.jpeg" alt="Comfortable Apartment" class="w-100">
+                           </a>
+
+                           <div class="card-badge green">For Rent</div>
+
+                        </figure>
+
+                     </div>
+                     </li>
+
+                     <li>
+                     <div class="property-card">
+
+                        <figure class="card-banner">
+
+                           <a href="#">
+                           <img src="./assets/images/Document-4.jpeg" alt="Luxury villa in Rego Park" class="w-100">
+                           </a>
+
+                           <div class="card-badge green">For Rent</div>
+
+                        </figure>
+
+                     </div>
+                     </li>
+
+                  </ul>
+
+               </div>
+            </section>
+
             <!-- CTA -->
          </article>
       </main>
@@ -448,5 +527,6 @@
       <!-- Icons -->
       <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
       <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+      <script src="./assets/js/script.js"></script>
    </body>
 </html>
