Menghapus dan mengganti bagian gallery

--- a/index.html
+++ b/index.html
@@ -334,48 +334,12 @@
                </div>
             </section>
             <!-- Gallery -->
-            <section class="gallery" id="gallery">
+            <section class="property" id="gallery">
                <div class="container">
+
                   <p class="section-subtitle">Photo Gallery</p>
                   <p class="section-subtitle">by</p>
                   <h2 class="h2 section-title">Andin Transport</h2>
-                  <ul class="gallery-list">
-                     <li class="gallery-item">
-                        <figure class="gallery-image">
-                           <img src="./assets/images/Document-1.jpeg" alt="Gallery image">
-                        </figure>
-                     </li>
-                     <li class="gallery-item">
-                        <figure class="gallery-image">
-                           <img src="./assets/images/Document-2.jpeg" alt="Gallery image">
-                        </figure>
-                     </li>
-                     <li class="gallery-item">
-                        <figure class="gallery-image">
-                           <img src="./assets/images/Document-3.JPG" alt="Gallery image">
-                        </figure>
-                     </li>
-                     <li class="gallery-item">
-                        <figure class="gallery-image">
-                           <img src="./assets/images/Document-4.jpeg" alt="Gallery image">
-                        </figure>
-                     </li>
-                     <li class="gallery-item">
-                        <figure class="gallery-image">
-                           <img src="./assets/images/Document-5.jpeg" alt="Gallery image">
-                        </figure>
-                     </li>
-                     <!-- Lanjutkan Gallery Disini -->
-                  </ul>
-               </div>
-            </section>
-
-            <section class="property" id="property">
-               <div class="container">
-
-                  <p class="section-subtitle">Properties</p>
-
-                  <h2 class="h2 section-title">Featured Listings</h2>
 
                   <ul class="property-list has-scrollbar">
 
@@ -401,7 +365,7 @@
                         <figure class="card-banner">
 
                            <a href="#">
-                           <img src="./assets/images/Document-2.jpeg" alt="Modern Apartments" class="w-100">
+                           <img src="./assets/images/Document-1.jpeg" alt="Modern Apartments" class="w-100">
                            </a>
 
                            <div class="card-badge orange">For Sales</div>
@@ -417,7 +381,7 @@
                         <figure class="card-banner">
 
                            <a href="#">
-                           <img src="./assets/images/Document-2.jpeg" alt="Comfortable Apartment" class="w-100">
+                           <img src="./assets/images/Document-1.jpeg" alt="Comfortable Apartment" class="w-100">
                            </a>
 
                            <div class="card-badge green">For Rent</div>
@@ -433,7 +397,7 @@
                         <figure class="card-banner">
 
                            <a href="#">
-                           <img src="./assets/images/Document-4.jpeg" alt="Luxury villa in Rego Park" class="w-100">
+                           <img src="./assets/images/Document-1.jpeg" alt="Luxury villa in Rego Park" class="w-100">
                            </a>
 
                            <div class="card-badge green">For Rent</div>
