input new icon and edited HTML

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Andin Transport</title>
       <!-- Logo Title  bos q -->
-      <link rel="shortcut icon" href="./assets/images/logo/andinlogo_title.png" type="image/svg+xml">
+      <link rel="shortcut icon" href="./assets/images/logo/andinlogo_title.png" type="image/png">
       <!-- Link CSS -->
       <link rel="stylesheet" href="./assets/css/style.css">
       <!-- Link FONT -->
