--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
                      </li>
                      <li class="contact-item">
                         <ion-icon name="mail-outline"></ion-icon>
-                        <a href="mailto:andin.tourly.com" class="contact-link">andintransport@gmail.com</a>
+                        <a href="mailto:andintransport@gmail.com" class="contact-link">andintransport@gmail.com</a>
                      </li>
                      <li class="contact-item">
                         <ion-icon name="location-outline"></ion-icon>
