--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
                <div class="footer-contact">
                   <h4 class="contact-title">Contact Us</h4>
                   <p class="contact-text">
-                     Datang atau hubungi kami! :D
+                     Segera Datang atau hubungi kami dibawah!
                   </p>
                   <ul>
                      <li class="contact-item">
