Added FAQ, Fix font

--- a/index.html
+++ b/index.html
@@ -531,9 +531,27 @@
                <details>
                    <summary class="footer-bottom-link">FAQ</summary>
                    <div>
-                       <p>Frequently Asked Questions (FAQ) - AndinTransport</p>
-                       <p>More details about the privacy policy...</p>
-                       <!-- Anda dapat menambahkan lebih banyak konten sesuai kebutuhan -->
+                        <p>Frequently Asked Questions (FAQ) - AndinTransport</p>
+                        <p><h3>1. Apa itu AndinTransport?</h3>
+                        <p>AndinTransport adalah perusahaan rental mobil yang menyediakan berbagai jenis kendaraan untuk kebutuhan perjalanan Anda, baik untuk keperluan pribadi, bisnis, maupun liburan.</p></p>
+
+                        <h3>2. Apa saja jenis kendaraan yang tersedia di AndinTransport?</h3>
+                        <p>Kami menyediakan berbagai jenis kendaraan, mulai dari mobil ekonomi, SUV, hingga mobil mewah. Anda dapat memilih kendaraan yang sesuai dengan kebutuhan dan anggaran Anda.</p>
+
+                        <h3>3. Bagaimana cara menyewa mobil di AndinTransport?</h3>
+                        <p>Anda dapat menyewa mobil dengan mengunjungi situs web kami di <a href="https://andintransport.com">andintransport.com</a>, memilih kendaraan yang Anda inginkan, dan mengisi formulir pemesanan. Anda juga bisa menghubungi layanan pelanggan kami untuk bantuan lebih lanjut.</p>
+
+                        <h3>4. Apa persyaratan untuk menyewa mobil di AndinTransport?</h3>
+                        <p>Untuk menyewa mobil, Anda harus memiliki SIM yang masih berlaku dan KTP. Beberapa kendaraan mungkin memerlukan syarat tambahan seperti deposit.</p>
+
+                        <h3>5. Apakah AndinTransport menyediakan layanan supir?</h3>
+                        <p>Ya, kami menyediakan layanan supir untuk kenyamanan Anda. Anda dapat memilih opsi ini saat melakukan pemesanan.</p>
+
+                        <h3>7. Apakah ada biaya tambahan yang perlu saya ketahui?</h3>
+                        <p>Biaya tambahan bisa mencakup bahan bakar, denda keterlambatan pengembalian, dan layanan tambahan seperti GPS atau kursi bayi. Semua biaya tambahan akan dijelaskan secara rinci pada saat pemesanan.</p>
+
+                        <h3>10. Bagaimana cara menghubungi AndinTransport untuk informasi lebih lanjut?</h3>
+                        <p>Anda dapat menghubungi kami melalui halaman kontak di situs web kami, melalui email di <a href="mailto:support@andintransport.com">support@andintransport.com</a>, atau melalui telepon di nomor 0123-456-789.</p>
                    </div>
                </details>
            </li>
