Added link to Contact

--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
          </article>
       </main>
       <!-- Footer -->
-      <footer class="footer">
+      <footer class="footer" id="contact">
          <div class="footer-top">
             <div class="container">
                <div class="footer-brand">
